<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Gradient Art</string>
  <string name="app_desc">Gradient meets filters</string>

  <string name="settings_title">Gradient Art Settings</string>
  <string name="pref_scheme_set">Color scheme set</string>
  <string name="pref_filter">Filter</string>
  <string name="pref_period">Period to keep</string>
  <string name="pref_period_sum">Keep the color for %s before random change</string>
  <string name="pref_name_pos">Position of scheme name</string>
  <string name="pref_name_sum">%s (vertical)</string>
</resources>