<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings_title"
                  android:key="settings" android:layout_width="match_parent"
                  android:layout_height="match_parent">

  <work.krrr.androidhelper.ListPreferenceCompat
          android:key="scheme_set"
          android:title="@string/pref_scheme_set"
          android:summary="%s"
          android:entries="@array/scheme_set_names"
          android:entryValues="@array/scheme_set_values"
          android:defaultValue="0"/>
  <work.krrr.androidhelper.ListPreferenceCompat
          android:key="filter"
          android:title="@string/pref_filter"
          android:summary="%s"
          android:entries="@array/filter_names"
          android:entryValues="@array/filter_indexes"
          android:defaultValue="0"/>
  <work.krrr.androidhelper.ListPreferenceCompat
          android:key="period"
          android:title="@string/pref_period"
          android:summary="@string/pref_period_sum"
          android:entries="@array/period_names"
          android:entryValues="@array/period_values"
          android:defaultValue="1800000"/>
  <work.krrr.androidhelper.ListPreferenceCompat
          android:key="name_pos"
          android:title="@string/pref_name_pos"
          android:summary="@string/pref_name_sum"
          android:entries="@array/name_pos_names"
          android:entryValues="@array/name_pos_values"
          android:defaultValue="50"/>
</PreferenceScreen>